# dsiterpp

./: LICENSE  README.md
cpp-sources/: CMakeLists.txt
cpp-sources/dsiterpp/: CMakeLists.txt
cpp-sources/dsiterpp/include/: integration.hpp  runge-error-estimator.hpp  time-iter.hpp
cpp-sources/dsiterpp/src/: runge-error-estimator.cpp  time-iter.cpp
cpp-sources/lib/: CMakeLists.txt
cpp-sources/lib/dsiterpp/: bifurcation.hpp  error-estimator.hpp  euler-explicit.hpp  integration.hpp  runge-error-estimator.hpp  runge-kutta.hpp  time-iter.hpp  utils.hpp
cpp-sources/lib/src/: error-estimator.cpp  euler-explicit.cpp  integration.cpp  runge-error-estimator.cpp  runge-kutta.cpp  time-iter.cpp
cpp-sources/ode-cpp-lite/: CMakeLists.txt
cpp-sources/ode-cpp-lite/include/: bifurcation.hpp  error-estimator.hpp  euler-explicit.hpp  integration.hpp  runge-error-estimator.hpp  runge-kutta.hpp  time-iter.hpp
cpp-sources/ode-cpp-lite/src/: error-estimator.cpp  euler-explicit.cpp  integration.cpp  runge-error-estimator.cpp  runge-kutta.cpp  time-iter.cpp
cpp-sources/unit-tests/: CMakeLists.txt  auto-step-adj.cpp  euler-explicit-ut.cpp  exponent-time-iterable.cpp  exponent-time-iterable.hpp  runge-kutta-ut.cpp
